--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Jan 28 15:21:15 EST 2021
-sdk.dir=C\:\\Users\\Sam\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\walte\\AppData\\Local\\Android\\Sdk
