--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "meteor-node-stubs": "^1.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0"
   },
   "meteor": {
