--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "jquery": "^3.5.1",
     "meteor-node-stubs": "^1.0.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
